--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
      maven { url "https://repo.maven.apache.org/maven2" }
 }
 dependencies {
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
     compile group: 'com.google.guava', name: 'guava', version:'27.0.1-jre'
     testCompile group: 'junit', name: 'junit', version:'4.12'
 }
